NYCCHKBK-5422 - Fixed title issue for advanced search contracts to not wrap.
Former-commit-id: 6826ed676ce43eaa97dafc8ba6d20e51e1e8e145 [formerly 6826ed676ce43eaa97dafc8ba6d20e51e1e8e145 [formerly 6826ed676ce43eaa97dafc8ba6d20e51e1e8e145 [formerly 70e8f9568f6e5b72ab8607be76269245d0ba4073]]]
Former-commit-id: a6d8d2c5f083ebcdfc87804924de6fa7e371c300
Former-commit-id: 280dd0f8a3b152ea8896fd3b9cdaa3663391c4cc
Former-commit-id: 4ec2058ba57de0b54df150ab7890d6bdadf5a83d

--- a/source/webapp/sites/all/themes/checkbook3/css/global.css
+++ b/source/webapp/sites/all/themes/checkbook3/css/global.css
@@ -66,6 +66,9 @@ h2 {
 h2.contract-title{
     width:475px;
 }
+div.contracts-advanced-search h2.contract-title  {
+    width:100%;
+}
 .tableHeader{
     float:left;
     clear:both;
